--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "homepage": "https://ahtesamtech.github.io/airBook"
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy" : "npm run build",
-"deploy" : "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@mui/icons-material": "^5.15.12",
